[gd_scene load_steps=20 format=3]

[ext_resource type="Script" path="res://scripts/environment/door.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bmafufmhy5xnv" path="res://sprites/environment/main_office/door.png" id="2"]
[ext_resource type="Script" path="res://scripts/environment/interactable_button.gd" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(107, 504)
script = null

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.499996, 0)]
}
script = null

[sub_resource type="Animation" id="3"]
resource_name = "door_close"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -504), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -504), Vector2(0, 0)]
}
script = null

[sub_resource type="Animation" id="4"]
resource_name = "door_open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0), Vector2(0, -504)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.499996, 0), Vector2(0, -504)]
}
script = null

[sub_resource type="AnimationLibrary" id="5"]
_data = {
"RESET": SubResource("2"),
"door_close": SubResource("3"),
"door_open": SubResource("4")
}
script = null

[sub_resource type="AnimationNodeAnimation" id="6"]
animation = &"door_close"
script = null

[sub_resource type="AnimationNodeAnimation" id="7"]
animation = &"door_open"
script = null

[sub_resource type="AnimationNodeStateMachineTransition" id="8"]
advance_mode = 2
advance_condition = &"trigger_open"
script = null

[sub_resource type="AnimationNodeStateMachineTransition" id="9"]
advance_mode = 2
advance_condition = &"trigger_close"
script = null

[sub_resource type="AnimationNodeStateMachineTransition" id="10"]
advance_mode = 2
script = null

[sub_resource type="AnimationNodeStateMachine" id="11"]
states/End/node = null
states/Start/node = null
states/door_close/node = SubResource("6")
states/door_close/position = Vector2(491, 105)
states/door_open/node = SubResource("7")
states/door_open/position = Vector2(340, 100)
transitions = ["door_close", "door_open", SubResource("8"), "door_open", "door_close", SubResource("9"), "Start", "door_open", SubResource("10")]
graph_offset = Vector2(6, 8)
script = null

[sub_resource type="CanvasTexture" id="12"]
script = null

[sub_resource type="StyleBoxTexture" id="13"]
texture = SubResource("12")
script = null

[sub_resource type="RectangleShape2D" id="14"]
size = Vector2(50, 50)
script = null

[sub_resource type="CanvasTexture" id="15"]
script = null

[sub_resource type="StyleBoxTexture" id="16"]
texture = SubResource("15")
script = null

[node name="door" type="StaticBody2D" node_paths=PackedStringArray("animation_tree")]
position = Vector2(53, 396)
script = ExtResource("1")
animation_tree = NodePath("AnimationTree")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(7.71357, 7.875)
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.499996, 0)
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("5")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("11")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/conditions/trigger_close = false
parameters/conditions/trigger_open = false

[node name="Light Button" type="Button" parent="."]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = 19.0
offset_right = 129.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(25, 25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("13")
script = ExtResource("3")

[node name="interact_area" type="Area2D" parent="Light Button" groups=[
"interactable",
]]

[node name="interact_collider" type="CollisionShape2D" parent="Light Button/interact_area"]
position = Vector2(25, 25)
shape = SubResource("14")

[node name="Door Button" type="Button" parent="." groups=[
"interactable",
]]
modulate = Color(1, 0, 0, 1)
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = -65.0
offset_right = 129.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25, 1.25)
pivot_offset = Vector2(25, 25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("16")
script = ExtResource("3")

[node name="interact_area" type="Area2D" parent="Door Button" groups=[
"interactable",
]]

[node name="interact_collider" type="CollisionShape2D" parent="Door Button/interact_area"]
position = Vector2(25, 25)
shape = SubResource("14")

[connection signal="button_enabled" from="." to="Light Button" method="set_interact_state_absolute" flags=18]
[connection signal="button_enabled" from="." to="Door Button" method="set_interact_state_absolute" flags=18]
[connection signal="button_down" from="Light Button" to="." method="change_light_state" flags=18 binds= [true]]
[connection signal="button_up" from="Light Button" to="." method="change_light_state" flags=18 binds= [false]]
[connection signal="button_down" from="Door Button" to="." method="switch_door_state" flags=18]
